# intro_mpi

./: CMakeLists.txt  Makefile  README.md  basicCommu.c  collectiveOperation.c  hello.c  helloDiffTask.c  helloWithId.c
